// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/HighlightedName Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <span
      class="sc-fKVqWL hOcWtv sc-iwjdpV csrXjq sc-ZOtfp ifePdV sc-jOxtWs bnLCKr"
    >
      Frontend Service
    </span>
  </div>
</div>
`;

exports[`Storyshots Core/HighlightedName With Custom Colors 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <span
      class="sc-fKVqWL hOcWtv sc-iwjdpV vGMJF sc-ZOtfp ifePdV sc-jOxtWs bdHbFA"
    >
      Frontend Service
    </span>
  </div>
</div>
`;
